--- a/visvikfrontend/package.json
+++ b/visvikfrontend/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.17.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10"
   },
