--- a/visvikbackend/.env
+++ b/visvikbackend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URL="mongodb://127.0.0.1:27017/visvikWebsite"
+MONGODB_URL="mongodb+srv://yk3543671:Z3PHxvGhjr1IT2cD@visvik.yg3a74h.mongodb.net/visvik?retryWrites=true&w=majority&appName=visvik"
 JWT_KEY="jwtSecretKey@@"
 
 CLOUDINARY_CLOUD_NAME=dhzkuzxao
